# bob

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  REUSE.toml  pyproject.toml
src/bob/: __init__.py  __main__.py  browse.py  cli.py  db.py  gate.py  kalshi.py  market_candles.py  viz.py  web_app.py
src/bob/research/: __init__.py  common.py  pnl.py  runner.py  s1.py  s10.py  s11.py  s12.py  s13.py  s14.py  s15.py  s16.py  s17.py  s18.py  s19.py  s2.py  s20.py  s21.py  s22.py  s23.py  s3.py  s4.py  s5.py  s6.py  s7.py  s8.py  s9.py  trades.py  tune.py
tests/: conftest.py  helpers.py  strategy_fixtures.py  test_candles.py  test_cli.py  test_db.py  test_gate.py  test_kalshi.py  test_market_candles.py  test_pnl.py  test_pnl_stop.py  test_research_all.py  test_research_common.py  test_s1.py  test_s10.py  test_s11.py  test_s12.py  test_s13.py  test_s14.py  test_s15.py  test_s16.py  test_s17.py  test_s18.py  test_s19.py  test_s2.py  test_s20.py  test_s21.py  test_s22.py  test_s23.py  test_s3.py  test_s4.py  test_s5.py  test_s6.py  test_s7.py  test_s8.py  test_s9.py  test_strategy_golden.py  test_trades.py  test_tune.py  test_viz.py
tests/fixtures/: cf_brti_hour.json  kxbtc_settled_event.json
tests/fixtures/research/: golden_decisions.json
