[project]
name = "bob"
version = "0.1.0"
description = "Trading research toolkit"
readme = "README.md"
authors = [
    { name = "Jason Scheffel", email = "contact@jasonscheffel.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
bob = "bob:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
