[project]
name = "bob"
version = "0.1.0"
description = "Trading research toolkit"
readme = "README.md"
authors = [
    { name = "Jason Scheffel", email = "contact@jasonscheffel.com" }
]
requires-python = ">=3.13"
dependencies = [
    "argon2-cffi>=25.1.0",
    "cryptography>=49.0.0",
    "httpx>=0.28.1",
    "rich>=15.0.0",
    "streamlit>=1.50.0",
    "typer>=0.27.0",
]

[project.scripts]
bob = "bob.cli:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
